@@ -1,0 +1,25 @@
+
+/*
+ * Copyright (C) 2011 RobotCub Consortium
+ * CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
+ *
+ */
+
+/** 
+ * @page yarp_without_nameserver Using YARP without a name server
+
+\author Paul Fitzpatrick
+
+YARP programs usually expect a special YARP name server to be running.
+This can be avoided, if you decide to allocate names yourself.
+If you call a port by a name with a tcp socket number in it:
+
+\verbatim
+Port p;
+p.open("/myhost:9999");
+\endverbatim
+
+Then no name server is needed (from YARP version 2.3.4).
+
+ *
+ */
