@@ -1,5 +1,8 @@
 2011-07-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/doc/yarp_with_ros.dox: first pass at documenting use of 
+	YARP with ROS.
+
 	* src/libYARP_OS/src/Companion.cpp: support "yarp detect --ros"
 	to run yarp on a ros name server.  Experimental.
 
